--- a/mendicoat.html
+++ b/mendicoat.html
@@ -3,7 +3,8 @@
 
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport"
+                content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no, minimum-scale=1, orientation=landscape">
         <title>Mendicot</title>
         <link rel="stylesheet" href="./output.css">
         <link rel="stylesheet" href="./mendicot.css">
