--- a/mendicoat.html
+++ b/mendicoat.html
@@ -17,9 +17,9 @@
         <div class="h-16 md:h-72 ">
                 <!-- <h1>hello</h1> -->
         </div>
-        <div class="m-10 flex justify-center">
+        <div class="m-5 md:m-10 md:p-5 md:pb-7 border-4 rounded-lg border-yellow-600 flex justify-center ">
                 <div id="my-cards" class="flex justify-start">
-                        <div class="bg-yellow-50 h-[6rem] w-auto flex">
+                        <div class=" h-[6rem] w-auto flex">
                                 <button class=" scale-125 hover:scale-150 md"><img id="card1"
                                                 src="./cards/ace-of-hearts.png" alt="">
                                 </button>
